tests/algorithms/x/C/hashes/enigma_machine.c
// Generated by Mochi 0.10.32 on 2025-08-16 11:14 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t build_alphabet_len;
size_t range_list_len;
size_t reversed_range_list_len;

size_t _slice_int_len;
size_t append_len;
static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

static const char** list_append_str(const char **arr, size_t *len, const char *val) {
    arr = realloc((void*)arr, (*len + 1) * sizeof(char*));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static long long* _slice_int(const long long *arr, size_t len, int start, int end, size_t *out_len) {
    if (start < 0) start = 0;
    if ((size_t)end > len) end = len;
    if (start > end) start = end;
    size_t n = end - start;
    long long *res = NULL;
    if (n) {
        res = malloc(n * sizeof(long long));
        memcpy(res, arr + start, n * sizeof(long long));
    }
    *out_len = n;
    _slice_int_len = n;
    return res;
}

static long long* list_append_long_long(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

const char* ASCII = " !\"#$%&'()*+,-./0123456789:;<=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\\]^_`abcdefghijklmnopqrstuvwxyz{|}";
const char* message = "HELLO WORLD";
long long token = 123LL;
const char* encoded = "";

const char* * build_alphabet();
long long * range_list(long long n);
long long * reversed_range_list(long long n);
long long index_of_char(const char* * lst, size_t lst_len, const char* ch);
long long index_of_int(long long * lst, size_t lst_len, long long value);
const char* enigma_encrypt(const char* message, long long token);
void _rotator(long long * gear_one, size_t gear_one_len, long long gear_one_pos, long long gear_two_pos, long long n);
int main(void);

const char* * build_alphabet() {
    const char* *result = NULL;
    size_t result_len = 0;
    long long i = 0LL;
    while (i < strlen(ASCII)) {
        result = list_append_str(result, &result_len, (const char[]){ASCII[i], 0});
        i = i + 1LL;
    }
    return build_alphabet_len = result_len, result;
}

long long * range_list(long long n) {
    long long *lst = NULL;
    size_t lst_len = 0;
    long long i = 0LL;
    while (i < n) {
        lst = list_append_long_long(lst, &lst_len, i);
        i = i + 1LL;
    }
    return range_list_len = lst_len, lst;
}

long long * reversed_range_list(long long n) {
    long long *lst = NULL;
    size_t lst_len = 0;
    long long i = n - 1LL;
    while (i >= 0LL) {
        lst = list_append_long_long(lst, &lst_len, i);
        i = i - 1LL;
    }
    return reversed_range_list_len = lst_len, lst;
}

long long index_of_char(const char* * lst, size_t lst_len, const char* ch) {
    long long i = 0LL;
    while (i < lst_len) {
        if (strcmp(lst[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? lst_len + _mochi_idx : _mochi_idx;})], ch) == 0) {
            return i;
        }
        i = i + 1LL;
    }
    return -1LL;
}

long long index_of_int(long long * lst, size_t lst_len, long long value) {
    long long i = 0LL;
    while (i < lst_len) {
        if (lst[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? lst_len + _mochi_idx : _mochi_idx;})] == value) {
            return i;
        }
        i = i + 1LL;
    }
    return -1LL;
}

const char* enigma_encrypt(const char* message, long long token) {
    const char* *alphabets = build_alphabet();
    size_t alphabets_len = build_alphabet_len;
    long long n = alphabets_len;
    long long *gear_one = range_list(n);
    size_t gear_one_len = range_list_len;
    long long *gear_two = range_list(n);
    size_t gear_two_len = range_list_len;
    long long *gear_three = range_list(n);
    size_t gear_three_len = range_list_len;
    long long *reflector = reversed_range_list(n);
    size_t reflector_len = reversed_range_list_len;
    long long gear_one_pos = 0LL;
    long long gear_two_pos = 0LL;
    long long gear_three_pos = 0LL;
    long long t = 0LL;
    while (t < token) {
        _rotator();
        t = t + 1LL;
    }
    const char* result = "";
    long long idx = 0LL;
    while (idx < strlen(message)) {
        result = str_concat(result, str_int(engine((const char[]){message[idx], 0})));
        idx = idx + 1LL;
    }
    return result;
}

void _rotator(long long * gear_one, size_t gear_one_len, long long gear_one_pos, long long gear_two_pos, long long n) {
    long long i = gear_one[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? gear_one_len + _mochi_idx : _mochi_idx;})];
    gear_one = _slice_int(gear_one, gear_one_len, 1LL, gear_one_len, &(_slice_int_len));
    gear_one_len = _slice_int_len;
    gear_one = list_append_long_long(gear_one, &gear_one_len, i);
    gear_one_pos = gear_one_pos + 1LL;
    if ((gear_one_pos % n) == 0LL) {
        i = gear_two[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? gear_two_len + _mochi_idx : _mochi_idx;})];
        gear_two = _slice_int(gear_two, gear_two_len, 1LL, gear_two_len, &(_slice_int_len));
        gear_two_len = _slice_int_len;
        gear_two = list_append_long_long(gear_two, &gear_two_len, i);
        gear_two_pos = gear_two_pos + 1LL;
        if ((gear_two_pos % n) == 0LL) {
            i = gear_three[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? gear_three_len + _mochi_idx : _mochi_idx;})];
            gear_three = _slice_int(gear_three, gear_three_len, 1LL, gear_three_len, &(_slice_int_len));
            gear_three_len = _slice_int_len;
            gear_three = list_append_long_long(gear_three, &gear_three_len, i);
            gear_three_pos = gear_three_pos + 1LL;
        }
    }
}

int main(void) {
    {
        long long __start = _now();
        encoded = enigma_encrypt(message, token);
        puts(encoded);
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
